feat: 添加问诊信息查询api接口
