# docs/swagger.yaml
@@ -43,8 +43,6 @@ definitions:
     properties:
       consult_status:
         type: integer
-      create_time:
-        type: string
       create_user_id:
         type: string
       dept_id:
@@ -144,6 +142,11 @@ definitions:
       org_name:
         type: string
     type: object
+  request.FindConsultByUser:
+    properties:
+      create_user_id:
+        type: string
+    type: object
   request.FindDoctorByName:
     properties:
       doctor_name:
@@ -186,6 +189,27 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: 创建一个问诊信息
+      tags:
+      - 问诊
+  /consult/findByUser:
+    post:
+      parameters:
+      - description: 用户id
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.FindConsultByUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"问诊信息获取成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 根据名称用户id查询该用户的问诊信息
       tags:
       - 问诊
   /dept/add:
